# cxr

./: .gitignore  Cargo.toml  README-ja.md  README.md  TODO.md  bun.test.ts  commitlint.config.cjs  package.json
.github/workflows/: release.yml
packaging/: README.md
packaging/homebrew/: cxr.rb.tpl
packaging/scoop/: cxr.json.tpl
scripts/: publish-packaging-updates.sh  render-packaging.sh  sync-packaging.sh
src/: args.rs  default.yaml  generator.rs  hooks.rs  lint.rs  main.rs  overwrite.rs  template.rs  vars.rs  vars_file.rs
