[package]
name = "cx"
version = "0.1.1"
about = "A tool to generate a directory structure from a YAML template."
authors = ["suzuuuuu09"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
